maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:25: error: ':' expected but identifier found.
def testmur(int a, int b){
                ^ShortestPathMaze:45: error: identifier expected but '}' found.
}
^